@@ -1,5 +1,6 @@
 package com.example.health_management.appointment.worker;
 
+import com.example.health_management.appointment.AppointmentEntity;
 import com.example.health_management.appointment.AppointmentRepository;
 import com.example.health_management.healthrecord.repository.HealthRecordRepository;
 import io.camunda.zeebe.client.api.response.ActivatedJob;
@@ -10,6 +11,8 @@ import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 @Component
@@ -27,19 +30,44 @@ public class CreateAppointmentHandler {
         LOG.info("Handling show appointment for process instance {}", job.getProcessInstanceKey());
         Map<String, Object> variables = job.getVariablesAsMap();
 
-        String userID = (String) variables.get("userID");
-        if(appointmentRepository.findByUserID(userID).isEmpty()) {
+        // String userID = (String) variables.get("userID");
+        List<AppointmentEntity> appointments = appointmentRepository.findAll();
+
+        if (appointments.isEmpty()) {
+            // No appointments found
+            LOG.info("No appointments found !!! ");
             client.newCompleteCommand(job.getKey())
-                    .variables(Collections.singletonMap("exists", false))
+                    .variables(Map.of(
+                            "exists", false,
+                            "appointments", Collections.emptyList()
+                    ))
                     .send()
                     .join();
-        }else {
-            LOG.error("Creating show appointment failed. Health record already exists for patient username {}", userID);
+        } else {
+            LOG.info("Appointments found {}", appointments);
+
+            List<Map<String, Object>> appointmentDetails = appointments.stream()
+                .map(appointment -> {
+                    Map<String, Object> map = new HashMap<>();
+                    map.put("id", appointment.getId());
+                    map.put("userID", appointment.getUserID());
+                    map.put("month", appointment.getMonth());
+                    map.put("day", appointment.getDay());
+                    map.put("date", appointment.getDate());
+                    map.put("time", appointment.getTime());
+                    return map;
+                })
+                .toList();
             client.newCompleteCommand(job.getKey())
-                    .variables(Collections.singletonMap("exists", true))
+                    .variables(Map.of(
+                            "exists", true,
+                            "appointments", appointmentDetails
+                    ))
                     .send()
                     .join();
         }
     }
+
+    
 }
     
